--- a/views/createEvent.ejs
+++ b/views/createEvent.ejs
@@ -1,89 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <style>
-        
-        @keyframes grad {
-            0% {
-                background-position: left;
-            }
-            100% {
-                background-position: right;
-            }
-        }
-        html {
-            font-family: 'Poppins', sans-serif;
-        }
-        body{ 
-            margin: 0;
-            height:100vh;
-            width:100vw;
-            overflow: hidden;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-color: blueviolet;
-            font-weight: 300;
-            background-image: linear-gradient(45deg,blueviolet,orangered);
-            background-size: 900vh 900vw;
-            background-position: left;
-            animation: grad 4000ms linear 0ms infinite alternate-reverse;
-            text-align: right;
-        }
-        input[type=checkbox] {
-            accent-color: rgb(104, 31, 171);
-            /* border: none; */
-        }
-        input[type=text] {
-            width: 100%;
-            /* border: none; */
-        }
-        input[type=text]:focus {
-            border: none;
-            border-bottom: 4px solid blueviolet;
-        }
-        
-        textarea {
-            font-family: "Poppins",sans-serif;
-            /* border: none; */
-            width: 100%;
-            resize: none;
-        }
-
-        textarea:focus {
-            border: none;
-            border-bottom: 4px solid blueviolet;
-        }
-
-        #box {
-            padding:1.5rem;
-            background-color: white;
-            box-shadow: 0 0 15px rgba(0, 0, 0, 0.163);
-            border-radius: 1rem;
-        }
-        input[type=submit]  {
-            padding: 0.5rem;
-            background-color: rgb(104, 31, 171);
-            border: 2px solid transparent;
-            border-radius: 0.25rem;
-            color:white;
-
-        }
-        /* button:hover {
-            border:2px solid rgb(104, 31, 171);
-            color:rgb(104, 31, 171);
-            background-color: white;
-        } */
-    </style>
-</head>
-
+<%- include('head.ejs') %>
 <body>
     <div id="box">
         <form action="/create-event" method="post">
