--- a/views/createEvent.ejs
+++ b/views/createEvent.ejs
@@ -6,7 +6,7 @@
         <form action="/create-event" method="post">
             <table>
                 <tr>
-                    <td colspan="2" align="center"><h1>Create Event</h1></td>
+                    <td colspan="2" align="left"><h1>Create Event</h1></td>
                 </tr>
                 <tr>
                     <td>Name of the Event:</td>
@@ -43,6 +43,7 @@
             </table>
         </form>
     </div>
+    <%- include('footer.ejs') %>
 </body>
 
 </html>
