--- a/views/done.ejs
+++ b/views/done.ejs
@@ -2,6 +2,9 @@
 <html lang="en">
 <%- include('head.ejs') %>
 <body>
-    
+    <div id="box">
+        <h1>Event Successfully created</h1>
+    </div>
+    <%- include('footer.ejs') %>
 </body>
 </html>
