--- a/views/head.ejs
+++ b/views/head.ejs
@@ -26,7 +26,6 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: blueviolet;
             font-weight: 300;
             background-image: linear-gradient(45deg,blueviolet,orangered);
             background-size: 900vh 900vw;
@@ -36,15 +35,25 @@
         }
         input[type=checkbox] {
             accent-color: rgb(104, 31, 171);
-            /* border: none; */
+            border: none;
         }
         input[type=text] {
             width: 100%;
             /* border: none; */
+            /* background-color: rgb(210, 210, 210); */
         }
         input[type=text]:focus {
             border: none;
             border-bottom: 4px solid blueviolet;
+        }
+        input[type=password] {
+            width: 100%;
+            /* border: none; */
+        }
+        input[type=password]:focus {
+            width: 100%;
+            border-bottom: 4px solid blueviolet;
+            border: none;
         }
         
         textarea {
@@ -72,6 +81,17 @@
             border-radius: 0.25rem;
             color:white;
 
+        }
+        footer {
+            position: absolute;
+            bottom: 0;
+            width:100vw;
+            z-index: 111;
+            display: flex;
+            justify-content: end;
+        }
+        footer p {
+            margin: 10px;
         }
         /* button:hover {
             border:2px solid rgb(104, 31, 171);
